# 2024-11-03

./: pyproject.toml
resources/: meters.json  readings.csv  sqlite.db
task/: main.py
task/db/: sqlite.py
task/model/: meter.py  reading.py  timed_reading.py
