[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["Connor Holloway <c.holloway314@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
